--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Landing-page</title>
+    <title>Portofolio</title>
 
     <!-- Bootstraps CSS -->
     <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
