--- a/index.html
+++ b/index.html
@@ -1,53 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Portofolio</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>My Portofolios</title>
 
-    <!-- Bootstraps CSS -->
-    <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/cover.css">
-    <link href="https://fonts.googleapis.com/css?family=Signika&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Stylish&display=swap" rel="stylesheet">
+        <!-- Bootstraps CSS -->
+        <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Signika&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Stylish&display=swap" rel="stylesheet">
 
-</head>
+    </head>
 
-<body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="masthead mb-auto">
-            <div class="inner">
-                <h3 class="masthead-brand">Cover</h3>
-                <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Contact</a>
-                </nav>
-            </div>
-        </header>
+    <body>
+        <!-- jumbotron -->
+        <div class="jumbotron text-center">
+            <img src="assets/img/profile.jpg" class="rounded-circle" alt="">
+            <h1>Abdul Qhodir Zaelany</h1>
+            <p>Web Developer</p>
+        </div>
+        <!-- close jumbotron -->
 
-        <main role="main" class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-            </p>
-        </main>
+        <!-- about -->
+        <section class="about" id="about">
 
-        <footer class="mastfoot mt-auto">
-            <div class="inner">
-                <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-        </footer>
-    </div>
+        </section>
+        <!-- close about -->
 
-    <!-- optional Javascript -->
-    <!-- JQuery -->
-    <script src="assets/js/jquery/dist/jquery.min.js"></script>
-    <script src="assets/js/popperjs/core/dist/umd/popper.js"></script>
-    <script src="assets/dist/js/bootstrap.min.js"></script>
-</body>
+        <!-- optional Javascript -->
+        <!-- JQuery -->
+        <script src="assets/js/jquery/dist/jquery.min.js"></script>
+        <script src="assets/js/popperjs/core/dist/umd/popper.js"></script>
+        <script src="assets/dist/js/bootstrap.min.js"></script>
+    </body>
 
 </html>
