--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
         <!-- about -->
         <section class="about" id="about">
+            <div class="container">
+                <div class="row">
 
+                </div>
+            </div>
         </section>
         <!-- close about -->
 
