--- a/index.html
+++ b/index.html
@@ -27,11 +27,50 @@
         <section class="about" id="about">
             <div class="container">
                 <div class="row">
-
+                    <div class="col-12 col-sm-12 col-lg-12 col-xs-12 col-md-12">
+                        <h2 class="text-center">About</h2>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5 col-sm-5 col-lg-5 col-md-5 col-sm-offset-1">
+                        <p>a</p>
+                    </div>
+                    <div class="col-5 col-sm-5 col-lg-5 col-md-5">
+                        <p>b</p>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- close about -->
+
+        <!-- Portofolios -->
+        <section class="portofolio" id="portofolio">
+            <div class="container">
+                <div class="row">
+                    <div class=" text-center col-12 col-sm-12 col-lg-12 col-xs-12 col-md-12">
+                        <h2 class="">Portofolio</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                    <h2 class="">Portofolio</h2>
+                    <hr>
+                </div>
+                <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                    <h2 class="">Portofolio</h2>
+                    <hr>
+                </div>
+                <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                    <h2 class="">Portofolio</h2>
+                    <hr>
+                </div>
+            </div>
+        </section>
+        <!-- close portofolios -->
 
         <!-- optional Javascript -->
         <!-- JQuery -->
