--- a/index.html
+++ b/index.html
@@ -57,20 +57,52 @@
 
             <div class="row">
                 <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
-                    <h2 class="">Portofolio</h2>
-                    <hr>
+                    <a href="" class="thumbnail">
+                        <img src="assets/img/portofolio/1.jpg" alt="" class=" rounded img-thumbnail">
+                    </a>
                 </div>
                 <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
-                    <h2 class="">Portofolio</h2>
-                    <hr>
+                    <a href="" class="thumbnail">
+                        <img src="assets/img/portofolio/1.jpg" alt="" class=" rounded img-thumbnail">
+                    </a>
                 </div>
                 <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
-                    <h2 class="">Portofolio</h2>
-                    <hr>
+                    <a href="" class="thumbnail">
+                        <img src="assets/img/portofolio/1.jpg" alt="" class=" rounded img-thumbnail">
+                    </a>
+                </div>
+                <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                    <a href="" class="thumbnail">
+                        <img src="assets/img/portofolio/1.jpg" alt="" class=" rounded img-thumbnail">
+                    </a>
+                </div>
+                <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                    <a href="" class="thumbnail">
+                        <img src="assets/img/portofolio/1.jpg" alt="" class=" rounded img-thumbnail">
+                    </a>
+                </div>
+                <div class=" text-center col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                    <a href="" class="thumbnail">
+                        <img src="assets/img/portofolio/1.jpg" alt="" class=" rounded img-thumbnail">
+                    </a>
                 </div>
             </div>
         </section>
         <!-- close portofolios -->
+
+        <!-- footer -->
+        <footer>
+            <div class="container text-center">
+                <div class="row">
+                    <div class=" col-4 col-sm-4 col-lg-4 col-xs-4 col-md-4">
+                        <p>&copy; 2020 | built with <i class="glyphicon glyphicon-heart"></i> by. <a
+                                href="https://www.instagram.com/qodirtok/">Abdul Qhodir
+                                Zaelany</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- close footer -->
 
         <!-- optional Javascript -->
         <!-- JQuery -->
