--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <!-- jumbotron -->
-
+        <h1 class="text-center">Cooming Soon</h1>
 
         <!-- footer -->
         <footer>
