--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<div id="wrapper">
 			<div id="header">
 				<h1>Abdul Qhodir Zaelany</h1>
-				<h2><strong class="sep-one"></strong>CoomingSoon<strong class="sep-two"></strong></h2>
+				<h2><strong class="sep-one"></strong>MAN JADDA WAJADA<strong class="sep-two"></strong></h2>
+				<br>
+				<h2><strong class="sep-one"></strong>Coming Soon<strong class="sep-two"></strong></h2>
 			</div>
 			<!-- <div id="middle">
 		<p>A relaxed and contemporary cafe bar in the centre of Palm Beach
