--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Opening this <span>Valentine’s - 14th Feb 2014</span></p>
 					<ul class="social">
 						<li class="facebook"><a href="https://www.facebook.com/qhodirtok/"></li>
 						<li class="twitter"><a href="https://twitter.com/qhdrs"></li>
-						<!-- <li class="youtube"><a href=""></li> -->
+						<li class="youtube"><a href="https://www.youtube.com/channel/UCncZrNjcghB1yXRdFecIVCQ"></li>
 					</ul>
 				</div>
 			</div>
